#
# Copyright (c) 2015 CNRS
# Authors: Mathieu Geisert
#
#

SET(LIBRARY_NAME ${PROJECT_NAME})


# Source files - Add here your source files
SET(${LIBRARY_NAME}_SOURCES
  my-file.cpp
)




SET(${LIBRARY_NAME}_FILES
	${${LIBRARY_NAME}_SOURCES}
	${${LIBRARY_NAME}_HEADERS}
	)

MESSAGE(${${LIBRARY_NAME}_FILES})

ADD_LIBRARY(${LIBRARY_NAME} SHARED ${${LIBRARY_NAME}_SOURCES})

PKG_CONFIG_USE_DEPENDENCY(${LIBRARY_NAME} gepetto-viewer-corba)


INSTALL(TARGETS ${LIBRARY_NAME} DESTINATION lib)
